--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-pkg-resources==0.0.0
+requirements here)
+pip~=21.2.4
+wheel~=0.37.0
+cryptography~=3.4.8
+setuptools~=49.2.1
+requests~=2.25.1
+base58~=2.1.1
+pandas~=1.2.5
+Flask~=2.0.1
+Faker~=9.9.0
